@@ -248,18 +248,17 @@ class ServiceDefinition {
                 if (parameterNode."@required" == "true") {
                     eci.message.addValidationError(null, "${namePrefix}${parameterName}", "Field cannot be empty (service ${getServiceName()})", null)
                 }
-                // if it isn't there continue since there is nothing to do with it
                 // NOTE: should we change empty values to null? for now, no
-                continue
+                // if it isn't there continue on since since default-value, etc are handled below
             }
 
             // check type
             Object converted = checkConvertType(parameterNode, namePrefix, parameterName, parameterValue, rootParameters, eci)
             if (converted != null) {
                 parameterValue = converted
-            } else {
+            } else if (parameterValue) {
                 // no type conversion? error time...
-                eci.message.addValidationError(null, "${namePrefix}${parameterName}", "Field was type [${parameterValue.class.name}], expecting type [${type}] (service ${getServiceName()})", null)
+                eci.message.addValidationError(null, "${namePrefix}${parameterName}", "Field was type [${parameterValue?.class?.name}], expecting type [${type}] (service ${getServiceName()})", null)
                 continue
             }
 
@@ -387,10 +386,13 @@ class ServiceDefinition {
         // set the default-value if applicable
         if (!parameterValue && !(parameterValue instanceof Boolean) && parameterNode."@default-value") {
             ((ContextStack) eci.context).push(rootParameters)
-            parameterValue = eci.getResource().evaluateStringExpand(parameterNode."@default-value", "${this.location}_${parameterName}_default")
-            // logger.warn("TOREMOVE For parameter ${namePrefix}${parameterName} new value ${parameterValue} from default-value ${parameterNode.'@default-value'} and context: ${eci.context}")
+            parameterValue = eci.getResource().evaluateContextField(parameterNode."@default-value", "${this.location}_${parameterName}_default")
+            // logger.warn("For parameter ${namePrefix}${parameterName} new value ${parameterValue} from default-value [${parameterNode.'@default-value'}] and context: ${eci.context}")
             ((ContextStack) eci.context).pop()
         }
+
+        // if no default, don't try to convert
+        if (!parameterValue) return null
 
         String type = parameterNode."@type" ?: "String"
         if (!StupidUtilities.isInstanceOf(parameterValue, type)) {
