@@ -48,8 +48,8 @@ public class ScriptServiceRunner implements ServiceRunner {
             } else {
                 // if there are fields in ec.context that match out-parameters but that aren't in the result, set them
                 for (String outParameterName in sd.getOutParameterNames()) {
-                    if (!autoResult.containsKey(outParameterName) && ec.context.get(outParameterName))
-                        autoResult.put(outParameterName, ec.context.get(outParameterName))
+                    if (!autoResult.containsKey(outParameterName) && cs.get(outParameterName))
+                        autoResult.put(outParameterName, cs.get(outParameterName))
                 }
                 return autoResult
             }
